examples/test/testpolicy11249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11249
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key46: value48
      key28: value45
      key37: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value5
          key15: value26
          key8: value40
      podSelector:
        matchLabels:
          key42: value2
          key17: value41
